# RaffleBot

./: .gitignore  Cargo.toml  config.sample.json  dialogues.db-shm  dialogues.db-wal
src/: main.rs  utils.rs
src/commands/: admin.rs  dialogues.rs  manager_keyboard.rs  mod.rs  points.rs  redeem.rs  start.rs
src/dialogue/: mod.rs
userdb/: Cargo.toml
userdb/src/: db.rs  lib.rs  tests.rs
userdb/src/db_instances/: mod.rs  sqlite_instance.rs
