[package]
name = "rafflebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.5.3", features = ["macros", "auto-send", "cache-me", "sqlite-storage"] }
teloxide-macros = "0.4.1"
log = "0.4"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"

serde = "1.0.104"
serde_json = "1.0"
futures = "0.3.5"
derive_more = "0.99.9"
lazy_static = "1.4.0"
async-mutex = "1.4.0"

userdb = {path = "userdb"}